# DynamicSystemsTestingFramework

./: .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  LICENSE  NEXT_SESSION.md  README.md  pyproject.toml  testing.json
.claude/: settings.local.json
.github/workflows/: quality.yml
.soul/: events.jsonl
ModelicaTestingLib/Components/: UnitTests.mo
ModelicaTestingLib/Examples/: ConstantTest.mo  NoUnitTest.mo  package.mo  package.order
ModelicaTestingLib/Resources/ReferenceResults/: test_manifest.json  test_spec.json  testing.json
docs/: CODE_REVIEW_2026-07-06.md  PHASE_2_5_CI_PLAN.md  PHASE_6_PLAN.md  SESSION_HANDOFF.md  architecture.md  constraints.md  decisions.md  extensibility.md  ideas.md  investigation_mat_read_hang.md  patterns.md  usage.md  vision.md
docs/qa/: reporter_checklist.md
docs/related_tools_research/: claude_code_session_prompt.md  evaluation_report.md  research_report.html
docs/related_tools_research/llm_responses/: chatgpt.md  copilot.md  gemini.md
docs/related_tools_research/research/: perplexity.md
docs/superpowers/plans/: 2026-04-22-openmodelica-backend.md  2026-04-24-dstf-rename.md  2026-04-24-event-timing-editor.md  2026-04-24-points-mode.md  2026-04-24-python-driven-tests.md  2026-04-24-range-metric-fixes.md  2026-04-30-dashboard-report-unification.md  2026-05-01-julia-recognizer-example.jl  2026-05-01-julia-recognizer.md
docs/superpowers/specs/: 2026-04-22-openmodelica-backend-design.md  2026-04-24-points-mode-design.md
examples/fmu/: README.md  test_spec.json  testing.json
examples/julia/: frequency.jl  test_spec.json  testing.json
examples/julia/JuliaMtkTestingLib/: Manifest.toml  Project.toml
examples/julia/JuliaMtkTestingLib/Examples/: Constant.jl  MetricTree.jl  MultiFrequency.jl  PointsCheck.jl  RangeCheck.jl  SimpleRamp.jl  TubeTolerance.jl
examples/modelica/ModelicaTestingLib/: package.mo  package.order
examples/modelica/ModelicaTestingLib/Components/: package.mo
examples/modelica/ModelicaTestingLib/Examples/: EventTest.mo  FrequencyTest.mo  IntervalTest.mo  MetricTreeTest.mo  MultiFrequencyTest.mo  PointsCheckTest.mo  RangeCheckTest.mo  SimpleTest.mo  SimulateOnlyTest.mo  TubeToleranceTest.mo  package.order
examples/python/PythonTestingLib/: README.md  pyproject.toml
examples/python/PythonTestingLib/Examples/: ConstantCsv.py  PointsCheck.py  SimpleRamp.py
examples/python/PythonTestingLib/Examples/data/: constant_experiment.csv
examples/python/PythonTestingLib/Resources/ReferenceResults/: test_spec.json  testing.json
examples/python/PythonTestingLib/Resources/ReferenceResults/Python/linux/: ref_0001.json  ref_0002.json  ref_0003.json
reports/python-work/: batch_manifest.json  dashboard.html  reference_manifest.json  status.json
reports/python-work/reports/: index.html
reports/python-work/test_0001/: python_stdout.txt  result.json
reports/python-work/test_0002/: python_stdout.txt  result.json
scripts/: fetch_reference_fmus.py  smoke_test_dymola_export.py
src/dstf/: __init__.py  __main__.py  cli.py  config.py
src/dstf/comparison/: algorithms.py  comparator.py  metric_tree.py  modes.py  tree_eval.py  tree_spec.py  types.py  validator.py
src/dstf/discovery/: json_recognizer.py  mo_parser.py  patch_apply.py  recognizer.py  spec_parser.py  test_registry.py
src/dstf/reporting/: console_report.py  dashboard_render.py  decimate.py  html_report.py  junit_report.py  overlay_loader.py  plot_comparison.py  schema_export.py
src/dstf/simulators/: __init__.py  base.py  cross_backend.py  progress.py  run_metadata.py
src/dstf/storage/: reference_store.py
src/modelica_testing/: __main__.py  cli.py  config.py
src/modelica_testing/comparison/: comparator.py  metric_tree.py  modes.py  tree_eval.py  tree_spec.py  validator.py
src/modelica_testing/discovery/: json_recognizer.py  mo_parser.py  mos_parser.py  spec_parser.py  test_registry.py
src/modelica_testing/reporting/: console_report.py  html_report.py  overlay_loader.py  plot_comparison.py
src/modelica_testing/simulation/: dymola_runner.py  result_reader.py
src/modelica_testing/simulators/: __init__.py  base.py  cross_backend.py  progress.py
src/modelica_testing/storage/: convert.py  migrate.py  reference_store.py
src/modelica_testing/tools/: verify_migration.py
testing/: README.md  __main__.py  config.py
testing/comparison/: comparator.py
testing/discovery/: test_registry.py
testing/reporting/: console_report.py  junit_report.py
testing/simulation/: dslog_parser.py
testing/storage/: reference_store.py
tests/: conftest.py  test_baseline_roles.py  test_cli.py  test_comparator.py  test_compare_accept.py  test_config.py  test_cross_backend.py  test_dashboard_render.py  test_decimate.py  test_discovery.py  test_dymola_export_fmu.py  test_dymola_interface_loader.py  test_event_and_freq_modes.py  test_export_schema.py  test_fmpy_environment.py  test_fmpy_runner.py  test_interactive_event_timing.py  test_interactive_html_snapshot.py  test_interactive_playwright.py  test_interactive_points.py  test_interactive_range_window.py  test_json_recognizer.py  test_julia_runner.py  test_metric_tree.py  test_metric_tree_spec.py  test_migration.py  test_mode_controls.py  test_openmodelica_log_parser.py  test_openmodelica_mos.py  test_openmodelica_persistent.py  test_openmodelica_runner.py  test_overlay_loader.py  test_patch_apply.py  test_progress_reporter.py  test_pta_demo.py  test_python_runner.py  test_recognizer.py  test_recognizer_wiring.py  test_report_size_budget.py  test_reporters.py  (+19 more)
tests/fixtures/: test_spec.json  testing.json
tests/fixtures/results_additional/: dslog.txt  dsmodelext1.c  translation_log.txt
tests/fixtures/results_openmodelica/: pid_controller_res.mat  pid_controller_stdout.txt
tests/fixtures/results_translation/: translation_log_failed.txt
tests/golden/: interactive_dominant_frequency.hash  interactive_event_timing.hash  interactive_final_only.hash  interactive_nrmse.hash  interactive_points.hash  interactive_range.hash  interactive_tube.hash
(+143 files in other folders)
