[project]
name = "dstf"
version = "0.1.0"
description = "Dynamic Systems Testing Framework — regression & unit testing for time-dependent system behavior across Modelica (Dymola, OpenModelica), FMU (FMPy), Julia (ModelingToolkit), and Python backends"
requires-python = ">=3.10"
dependencies = [
    "jinja2>=3.1",
    "matplotlib>=3.8",
    "numpy>=1.20",
    "psutil>=5.9",
]

[project.optional-dependencies]
# scipy is needed for examples/python/PythonTestingLib/Examples/SimpleRamp.py
# (the Python-backend example uses scipy.integrate.solve_ivp). The end-to-end
# Python-runner tests skip cleanly without it (see tests/test_python_runner.py
# `_scipy_available`), but the default dev install pulls it so the full suite
# runs out of the box.
dev = ["pytest>=7.0", "scipy>=1.10"]
# FMPy backend (Phase 2). Install with: uv pip install -e ".[fmpy]"
# Or bundled with dev: uv pip install -e ".[dev,fmpy]"
fmpy = ["fmpy>=0.3"]
# Persistent-worker OpenModelica (D70). Drives omc via ZMQ through OMPython
# instead of spawning a subprocess per test. Batch path still works without
# it — the CLI falls back automatically if the import fails.
# Install with: uv pip install -e ".[om]"
om = ["OMPython>=3.5"]

[project.scripts]
dstf = "dstf.cli:main_entry"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dstf"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "dymola: requires Dymola installation",
    "fmpy: requires fmpy package",
    "ompython: requires OMPython package (persistent-worker OpenModelica)",
    "reference_fmus: requires Reference-FMUs submodule at examples/fmu/reference-fmus",
    "julia: requires Julia 1.10+ with ModelingToolkit + OrdinaryDiffEq installed in examples/julia/Project.toml",
]
filterwarnings = [
    "ignore::pytest.PytestCollectionWarning",
]
