[project]
name = "dstf"
version = "0.1.0"
description = "Dynamic Systems Testing Framework — regression & unit testing for time-dependent system behavior across Modelica (Dymola, OpenModelica), FMU (FMPy), Julia (ModelingToolkit), and Python backends"
requires-python = ">=3.10"
dependencies = [
    "jinja2>=3.1",
    "matplotlib>=3.8",
    "numpy>=1.20",
    "psutil>=5.9",
]

[project.optional-dependencies]
# scipy is needed for examples/python/PythonTestingLib/Examples/SimpleRamp.py
# (the Python-backend example uses scipy.integrate.solve_ivp). The end-to-end
# Python-runner tests skip cleanly without it (see tests/test_python_runner.py
# `_scipy_available`), but the default dev install pulls it so the full suite
# runs out of the box.
dev = [
    "pytest>=7.0",
    "scipy>=1.10",
    "ruff>=0.6",
    "mypy>=1.10",
    "pytest-cov>=5.0",
]
# FMPy backend (Phase 2). Install with: uv pip install -e ".[fmpy]"
# Or bundled with dev: uv pip install -e ".[dev,fmpy]"
fmpy = ["fmpy>=0.3"]
# Persistent-worker OpenModelica (D70). Drives omc via ZMQ through OMPython
# instead of spawning a subprocess per test. Batch path still works without
# it — the CLI falls back automatically if the import fails.
# Install with: uv pip install -e ".[om]"
om = ["OMPython>=3.5"]

[project.scripts]
dstf = "dstf.cli:main_entry"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dstf"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "dymola: requires Dymola installation",
    "fmpy: requires fmpy package",
    "ompython: requires OMPython package (persistent-worker OpenModelica)",
    "reference_fmus: requires Reference-FMUs submodule at examples/fmu/reference-fmus",
    "julia: requires Julia 1.10+ with ModelingToolkit + OrdinaryDiffEq installed in examples/julia/Project.toml",
]
filterwarnings = [
    "ignore::pytest.PytestCollectionWarning",
]

# --- Quality floor (D88) ---------------------------------------------------

[tool.ruff]
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
# Curated starter set (D88): real-bug rules + import sort + modernization,
# deliberately NOT `--select ALL` (style noise buries genuine defects).
#   F  pyflakes        E/W pycodestyle    B  flake8-bugbear
#   I  isort           UP  pyupgrade      SIM flake8-simplify
select = ["F", "E", "W", "B", "I", "UP", "SIM"]
ignore = [
    "E501",    # line length — formatter owns wrapping; long strings/URLs are fine
    "SIM105",  # try/except/pass — deliberate best-effort cleanup in shutdown/parse
               # paths; contextlib.suppress is not clearer enough to justify churn
    "B905",    # zip() without strict= — not enforced yet; revisit when ratcheting
]

[tool.ruff.lint.per-file-ignores]
# Tests favor readability over lint purity: late imports after fixtures,
# `== True` assertions, throwaway locals, %-format, lambdas.
"tests/**" = ["B011", "SIM", "E402", "E712", "E731", "F841", "UP031", "B905", "B007"]

[tool.mypy]
# Tiered adoption (D88): lenient baseline scoped to the typed-dataclass core.
# The registry/strategy glue, Dymola-logger monkey-patching, and JSON-dict
# flow have poor type signal and are left out of scope for now.
python_version = "3.10"
files = [
    "src/dstf/comparison",
    "src/dstf/discovery",
    "src/dstf/storage",
    "src/dstf/config.py",
]
ignore_missing_imports = true   # fmpy / OMPython / Dymola interface / julia have no stubs
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.coverage.run]
source = ["dstf"]
# Omit hardware-gated execution paths (D88): these need an actual simulator
# (or run in a child process coverage can't see), so counting them as misses
# just deflates the metric. Coverage here reflects CI-runnable code.
omit = [
    "*/dstf/__main__.py",
    "*/simulators/dymola/*",
    "*/simulators/julia/*",
    "*/simulators/fmpy/runner.py",
    "*/simulators/openmodelica/session_loader.py",
    "*/simulators/python/run_test.py",
    "*/simulators/cross_backend.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
]
