# Optional: users of PythonTestingLib can `uv pip install -e .` here
# to pick up scipy. The framework itself does not require scipy —
# it's only needed by the SimpleRamp example.

[project]
name = "python-testing-lib"
version = "0.0.1"
description = "Example Python tests for the modelica-testing framework"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
]
